--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build:
+  build-app:
     runs-on: ubuntu-latest
 
     container:
@@ -19,10 +19,10 @@ jobs:
       - name: Build Application
         run: make build-app
 
-  deploy:
+  build-docker:
     runs-on: ubuntu-latest
 
-    needs: build
+    needs: build-app
 
     steps:
       - name: Checkout Repository
