--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ dependencies {
     runtimeOnly("org.postgresql:postgresql")
     implementation("jakarta.persistence:jakarta.persistence-api:2.2.3")
     implementation("io.micronaut.data:micronaut-data-hibernate-jpa")
+
+    //testing
+    testImplementation("io.micronaut.test:micronaut-test-rest-assured")
 }
 
 
