--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,9 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
+      - name: Install Make
+        run: sudo apt update && sudo apt install make
+
       - name: Build Application
         run: make build-app
 
