--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Make
-        run: sudo apt update && sudo apt install make
+        run: apt update && apt install make
 
       - name: Build Application
         run: make build-app
