--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Make
-        run: apt-get update && apt-get install make
+        run: apk --no-cache add make
 
       - name: Build Application
         run: make build-app
@@ -30,6 +30,9 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
+
+      - name: Install Make
+        run: apt update && apt install make
 
       - name: Build Docker Image
         run: make build-docker
