--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Make
-        run: apt update && apt install make
+        run: sudo apt update && sudo apt install make
 
       - name: Build Docker Image
         run: make build-docker
