--- a/build.gradle
+++ b/build.gradle
@@ -69,5 +69,15 @@ micronaut {
     }
 }
 
+plugins {
+  id "org.sonarqube" version "4.4.1.3373"
+}
 
+sonar {
+  properties {
+    property "sonar.projectKey", "renanhsilva_ms-lanchonetedarua-pagamento"
+    property "sonar.organization", "renanhsilva"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
+}
 
