--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,30 @@ jobs:
           name: build-artifacts
           path: build/libs
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+          aws-region: ${{ env.AWS_REGION }}
+          
       - name: Build Docker Image
         run: |
-          docker build -t lanchonete-da-rua-pagamento .
+          docker build -t ms-lanchonetedarua-pagamento:latest .
+        env:
+          AWS_DEFAULT_REGION: us-east-1
+
+      - name: Push Docker image to ECR
+        run: |
+          # Login ECR
+          aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 468037464742.dkr.ecr.us-east-1.amazonaws.com
+          
+          # Image tag
+          docker tag ms-lanchonetedarua-pagamento:latest 468037464742.dkr.ecr.us-east-1.amazonaws.com/lanchonetedarua:ms-lanchonetedarua-pagamento-latest
+          
+          # Publish image to ecr
+          docker push 468037464742.dkr.ecr.us-east-1.amazonaws.com/lanchonetedarua:ms-lanchonetedarua-pagamento-latest
+        env:
+          AWS_DEFAULT_REGION: us-east-1
+    
