--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+          #aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
           aws-region: us-east-1
           
       - name: Build Docker Image
@@ -58,13 +58,13 @@ jobs:
       - name: Push Docker image to ECR
         run: |
           # Login ECR
-          aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 468037464742.dkr.ecr.us-east-1.amazonaws.com
+          aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 339713163875.dkr.ecr.us-east-1.amazonaws.com
           
           # Image tag
-          docker tag ms-lanchonetedarua-pagamento:latest 468037464742.dkr.ecr.us-east-1.amazonaws.com/lanchonetedarua:ms-lanchonetedarua-pagamento-latest
+          docker tag ms-lanchonetedarua-pagamento:latest 339713163875.dkr.ecr.us-east-1.amazonaws.com/lanchonetedarua:ms-lanchonetedarua-pagamento-latest
           
           # Publish image to ecr
-          docker push 468037464742.dkr.ecr.us-east-1.amazonaws.com/lanchonetedarua:ms-lanchonetedarua-pagamento-latest
+          docker push 339713163875.dkr.ecr.us-east-1.amazonaws.com/lanchonetedarua:ms-lanchonetedarua-pagamento-latest
         env:
           AWS_DEFAULT_REGION: us-east-1
     
